test/conformance/chainsaw/cli/rule-same-policy-different/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: preconditions
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: anyrule
    preconditions:
      any:
      - key: '{{request.object.metadata.labels.app}}'
        operator: Equals
        value: busybox
    validate:
      message: Busybox must be used based on this label combination.
      pattern:
        spec:
          containers:
          - name: '*busybox*'
  validationFailureAction: Enforce
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: test-jmespath
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: any-rule
    validate:
      deny:
        conditions:
          all:
          - key: '{{ request.object.metadata.labels | merge(@, `{"test": ""}`)}}'
            operator: NotEquals
            value:
              a: "1"
              test: ""
      message: All pod labels must match except test
  validationFailureAction: Enforce
