test/conformance/chainsaw/cli/rule-same-policy-different/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-invalid
  labels:
    app: busybox
spec:
  containers:
  - name: nginx
    image: nginx:latest
