test/conformance/chainsaw/cli/rule-same-policy-different/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: rule-same-policy-different
    try:
    - script:
        content: kyverno test .
        check:
          ($error != null): true
          ($stderr): "Error: failed to run test (The rule any-rule cannot be found in the policy named preconditions.)"
