test/conformance/chainsaw/cli/rule-same-policy-different/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: preconditions 
  resources:
  - test-invalid
  result: fail
  rule: any-rule
